# gRPC-rust

./: Cargo.toml  README.md  build.rs
proto/: calculator.proto
src/: client.rs  main.rs
