[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1", features = ["full"] }
tonic-reflection = "0.11.0"
prost = "0.12.6"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"